src/test/ui/suggestions/dont-suggest-try_into-in-macros.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-try_into-in-macros.rs:2:5
   |
LL |     assert_eq!(10u64, 10usize);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u64`, found `usize`
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
